examples/module1/errors/string_reverse/string_reverse.go
package strev

func Reverse(s string) string {
	// rune 类型别名 符号
	runes := []rune(s)
	n, h := len(runes), len(runes)/2
	for i := 0; i < h; i++ {
		//换位置
		/*Go 语言中的字符串是不可变的，也就是说 str[index] 这样的表达式是不可以被放在等号左侧的
				。如果尝试运行 str[i] = 'D' 会得到错误：cannot assign to str[i]。
		因此，您必须先将字符串转换成字节数组，然后再通过修改数组中的元素值来达到修改字符串的目的，最后将字节数组转换回字符串格式。
				;*/
		runes[i], runes[n-1-i] = runes[n-1-i], runes[i]
	}
	return string(runes)
}
